deployments/pathweb/ha-code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-code-server
  namespace: home-network
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ha-code-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ha-code-server
      annotations:
        io.cilium.proxy-visibility: <Egress/53/UDP/DNS>,<Egress/80/TCP/HTTP>
    spec:
      nodeSelector:
        location: rfhome
      containers:
      - name: code-server
        image: lscr.io/linuxserver/code-server:4.18.0
        volumeMounts:
          - name: config
            mountPath: /config
          - name: home-assistant
            mountPath: /config/workspace/home-assistant
          - name: home-assistant
            mountPath: /config/workspace/appdaemon
            subPath: appdaemon
        resources:
          requests:
            cpu: 15m
            memory: 145M
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 8443
          name: web
      volumes:
        - name: config
          persistentVolumeClaim: 
            claimName: ha-code-server-config
        - name: home-assistant
          persistentVolumeClaim: 
            claimName: home-assistant-data
