deployments/pathweb/ha-code-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-code-server
  labels:
    external-dns: local-pdns
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: ha-code-server.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: home-assistant
            port: 
              name: http
  tls:
    - hosts:
      - ha-code-server.services.home.yrf.me
      secretName: services-wildcard-cert
